# open-heatloss-studio

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  tenants.json
crates/isso51-core/: Cargo.toml
crates/isso51-core/examples/: calc_from_file.rs  dr_diff.rs  eval_external.rs  gen_fixture.rs  gen_woonboot_expected.rs  vabi_import.rs
crates/isso51-core/src/: error.rs  formulas.rs  lib.rs  result.rs
crates/isso51-core/src/calc/: heating_up.rs  infiltration.rs  room_load.rs  transmission.rs
crates/isso51-core/src/import/: mod.rs  sfb.rs  thermal.rs
crates/isso51-core/src/model/: building.rs  climate.rs  construction.rs  enums.rs  mod.rs  room.rs  ventilation.rs
crates/isso51-core/src/tables/: heating_up.rs  infiltration.rs  mod.rs  temperature.rs  ventilation.rs
crates/isso51-core/src/validate/: mod.rs
crates/isso51-core/tests/: integration_test.rs  vabi_import_test.rs
crates/isso53-core/: Cargo.toml
crates/isso53-core/examples/: minimal.json
crates/isso53-core/src/: error.rs  formulas.rs  lib.rs  result.rs  validate.rs
crates/isso53-core/src/calc/: ground.rs  heating_up.rs  infiltration.rs  mod.rs  rc_high.rs  room_load.rs  shell.rs  source_capacity.rs  transmission.rs  ventilation.rs
crates/isso53-core/src/model/: building.rs  climate.rs  construction.rs  enums.rs  heating_up.rs  mod.rs  project.rs  room.rs  ventilation.rs
crates/isso53-core/src/tables/: adjacent_unheated.rs  building_type.rs  ground_params.rs  heating_up.rs  infiltration.rs  mod.rs  nen8088.rs  occupancy.rs  source_fraction.rs  temperature.rs  temperature_stratification.rs  thermal_bridge.rs  thermal_mass.rs  ventilation_requirements.rs  ventilation_system.rs
crates/isso53-core/tests/: PDF_GAPS.md  golden.rs  vabi_dr_golden.rs  vabi_golden.rs  vabi_houtfabriek_3floors_golden.rs
crates/isso53-core/tests/fixtures/: vabi_dr_engineering_kantoorwest_input.json  vabi_houtfabriek_bedrijfsruimte4_expected.json  vabi_houtfabriek_bedrijfsruimte4_input.json  voorbeeld_61_expected.json  voorbeeld_61_input.json  voorbeeld_62_expected.json  voorbeeld_62_input.json
crates/isso74-core/: Cargo.toml
crates/isso74-core/src/: error.rs  lib.rs  result.rs
crates/isso74-core/src/calc/: assess.rs  csv.rs  mod.rs  pmv.rs  rmot.rs
crates/isso74-core/src/model/: config.rs  mod.rs  request.rs
crates/isso74-core/src/tables/: atg.rs  mod.rs
crates/isso74-core/tests/fixtures/: example_hourly.csv
crates/nta8800-automation/: Cargo.toml
crates/nta8800-automation/src/: errors.rs  lib.rs  references.rs
crates/nta8800-automation/src/calc/: factor_lookup.rs  mod.rs
crates/nta8800-automation/src/model/: automation_config.rs  bacs_class.rs  mod.rs
crates/nta8800-automation/src/result/: automation_factors.rs  mod.rs
crates/nta8800-automation/tests/: integration.rs
crates/nta8800-cooling/: Cargo.toml
crates/nta8800-cooling/src/: bijlage_aa.rs  errors.rs  lib.rs  references.rs
crates/nta8800-cooling/src/calc/: mod.rs  monthly_use.rs  simplified.rs
crates/nta8800-cooling/src/model/: cooling_system.rs  distribution.rs  emission.rs  mod.rs
crates/nta8800-cooling/src/result/: mod.rs  (+2 more)
crates/nta8800-cooling/tests/: bijlage_aa_test.rs  vabi_koellast_golden.rs  vabi_tojuli_golden.rs
crates/nta8800-core/: Cargo.toml  README.md
crates/nta8800-core/examples/: minimal.json  run_all.rs
crates/nta8800-core/src/: error.rs  formulas.rs  lib.rs  model.rs  orchestrator.rs  result.rs
crates/nta8800-core/tests/: examples_test.rs  gen_fixtures.py
crates/nta8800-demand/: Cargo.toml
crates/nta8800-demand/src/: errors.rs  lib.rs  references.rs
crates/nta8800-dhw/: Cargo.toml
crates/nta8800-dhw/src/: errors.rs  lib.rs  references.rs
crates/nta8800-ep/: Cargo.toml
crates/nta8800-ep/src/: beng.rs  errors.rs  lib.rs  references.rs  tojuli.rs
crates/nta8800-geometry/: Cargo.toml
crates/nta8800-geometry/src/: lib.rs  references.rs
crates/nta8800-heating/: Cargo.toml
crates/nta8800-heating/src/: errors.rs  lib.rs  references.rs
crates/nta8800-humidity/: Cargo.toml
crates/nta8800-humidity/src/: errors.rs  lib.rs  references.rs
crates/nta8800-humidity/tests/: integration.rs
crates/nta8800-lighting/: Cargo.toml
crates/nta8800-lighting/src/: errors.rs  lib.rs  references.rs
crates/nta8800-model/: Cargo.toml
crates/nta8800-model/src/: climate.rs  error.rs  lib.rs  location.rs  references.rs  resolve.rs  time.rs  units.rs
crates/nta8800-pv/: Cargo.toml
crates/nta8800-pv/src/: errors.rs  lib.rs  references.rs  result.rs
crates/nta8800-tables/: Cargo.toml
crates/nta8800-tables/src/: lib.rs  references.rs  rounding.rs
crates/nta8800-transmission/: Cargo.toml
crates/nta8800-transmission/src/: errors.rs  lib.rs  references.rs
crates/nta8800-transmission/tests/: small_house.rs
crates/nta8800-ventilation/: Cargo.toml
crates/nta8800-ventilation/src/: errors.rs  lib.rs  references.rs  tables.rs
crates/nta8800-ventilation/tests/: integration.rs
crates/openaec-project-shared/: Cargo.toml
crates/openaec-project-shared/src/: beng_geometry.rs  calcs.rs  energy.rs  geometry.rs  lib.rs  migration.rs  nta8800_view.rs  project.rs  shared.rs  tojuli.rs  view.rs
crates/openaec-project-shared/tests/: beng_geometry_fixture.rs  beng_golden.rs  edr_golden.rs
crates/uniec3-import/: Cargo.toml
crates/uniec3-import/src/: error.rs  geometry.rs  installations.rs  lib.rs  parse.rs  results.rs
crates/uniec3-import/tests/: multizone_golden.rs  round_trip.rs  synthetic.rs  variation_smoke.rs
crates/vabi-importer/: Cargo.toml
crates/vabi-importer/src/: error.rs  lib.rs  mapper.rs
crates/vabi-importer/tests/: v2_import.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/fonts/: LICENSE.txt
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/reports/: blocks.rs  brand.rs  fonts.rs  generator.rs  mod.rs  schema.rs  special_pages.rs
src-tauri/tests/: calculate_v2_routing.rs  reports_smoke.rs
(+690 files in other folders)
