[workspace]
resolver = "2"
members = [
    "crates/isso51-core",
    "crates/isso53-core",
    "crates/isso51-ifcx",
    "crates/isso51-api",
    "crates/nta8800-automation",
    "crates/nta8800-cooling",
    "crates/nta8800-demand",
    "crates/nta8800-dhw",
    "crates/nta8800-ep",
    "crates/nta8800-geometry",
    "crates/nta8800-heating",
    "crates/nta8800-humidity",
    "crates/nta8800-lighting",
    "crates/nta8800-model",
    "crates/nta8800-pv",
    "crates/nta8800-tables",
    "crates/nta8800-transmission",
    "crates/nta8800-ventilation",
    "crates/openaec-project-shared",
    "crates/vabi-importer",
    "src-tauri",
]
# openaec-reports is een aparte workspace (Rust 2024 edition) die
# alleen via path-deps wordt benaderd. Excluden voorkomt dat cargo
# de inner workspace opslokt en met onze 2021 edition probeert te bouwen.
exclude = ["libs/openaec-reports"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
