[package]
name = "isso51-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 51 warmteverliesberekening desktop app"
# Without this, Tauri's CLI picks gen_pdf (alphabetically first auto-detected
# bin from src/bin/) as the "main app" and bundles only that into the
# installer, leaving out the actual Tauri exe. Pin the Tauri binary as the
# package default so `cargo tauri build` finds the right entry point.
default-run = "isso51-desktop"

[lib]
name = "isso51_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
isso51-core = { path = "../crates/isso51-core", features = ["vabi-import"] }
nta8800-cooling = { path = "../crates/nta8800-cooling" }
nta8800-model = { path = "../crates/nta8800-model" }
nta8800-tables = { path = "../crates/nta8800-tables" }
openaec-project-shared = { path = "../crates/openaec-project-shared" }
openaec-layout = { path = "../libs/openaec-reports/rust/crates/openaec-layout" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"

[dev-dependencies]
lopdf = "0.39"
