[package]
name = "isso51-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 51 heat loss calculation engine for residential buildings"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

# Vabi import dependencies (behind feature flag)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
zip = { version = "0.6", optional = true }
tempfile = { version = "3.8", optional = true }

[features]
default = []
vabi-import = ["dep:rusqlite", "dep:zip", "dep:tempfile"]

[dev-dependencies]
approx = "0.5"
