[package]
name = "isso51-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 51 heat loss calculation engine for residential buildings"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

# Vabi import dependencies (behind feature flag)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
zip = { version = "0.6", optional = true }
tempfile = { version = "3.8", optional = true }

[features]
default = []
vabi-import = ["dep:rusqlite", "dep:zip", "dep:tempfile"]

[dev-dependencies]
approx = "0.5"

# Het `vabi_import` example gebruikt `import::import_vabi_project`, dat alleen
# achter de `vabi-import` feature wordt ge-re-export (zie `import/mod.rs`).
# Zonder deze sectie probeert Cargo het example onder default-features te
# compileren → `E0432 unresolved import`. Met `required-features` slaat
# `cargo build --examples` (zonder feature) het over en compileert
# `cargo build --examples --features vabi-import` het wél.
# (De overige examples — calc_from_file, dr_diff, eval_external, gen_fixture,
# gen_schemas, gen_woonboot_expected — gebruiken alleen niet-gated API en
# hebben geen `[[example]]`-sectie nodig.)
[[example]]
name = "vabi_import"
required-features = ["vabi-import"]
