[package]
name = "isso53-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 53 heat loss calculation engine for utility buildings (≤4m ceiling height)"

[[bin]]
name = "isso53-cli"
path = "src/bin/isso53-cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

[dev-dependencies]
approx = "0.5"