[package]
name = "isso74-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ISSO 74 thermal comfort / overheating assessment engine (ATG, TO-uren, GTO) — toets-laag on supplied hourly operative temperatures"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
