[package]
name = "nta8800-demand"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 maandelijkse warmte- en koudebehoefte bepaling"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nta8800-model = { path = "../nta8800-model" }
nta8800-tables = { path = "../nta8800-tables" }
nta8800-transmission = { path = "../nta8800-transmission" }
nta8800-ventilation = { path = "../nta8800-ventilation" }

[dev-dependencies]
approx = "0.5"
