[package]
name = "nta8800-dhw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 warm tapwater energiegebruik"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
