[package]
name = "nta8800-ep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 EP-score integratie + primair energiegebruik + beleidsfactoren"

[dependencies]
nta8800-model = { path = "../nta8800-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
