[package]
name = "nta8800-geometry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 gebouwbegrenzing en oppervlakte/lengte bepaling"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nta8800-model = { path = "../nta8800-model" }

[dev-dependencies]
approx = "0.5"
