[package]
name = "nta8800-heating"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 verwarming — afgifte, distributie, opwekking, regeling"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nta8800-model = { path = "../nta8800-model" }
nta8800-tables = { path = "../nta8800-tables" }
nta8800-demand = { path = "../nta8800-demand" }

[dev-dependencies]
approx = "0.5"
