[package]
name = "nta8800-humidity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 bevochtiging en ontvochtiging"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nta8800-model = { path = "../nta8800-model" }
nta8800-tables = { path = "../nta8800-tables" }

[dev-dependencies]
approx = "0.5"
