[package]
name = "nta8800-tables"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 normatieve default-tabellen — klimaatdata H.17, lambda/U/psi bijlagen E/F/G/H/I/L, afronding bijlage X"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
nta8800-model = { path = "../nta8800-model" }

[dev-dependencies]
approx = "0.5"
