[package]
name = "nta8800-transmission"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NTA 8800 transmissie warmteverlies — maandmethode + lineaire/punt-bruggen"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
