[package]
name = "openaec-project-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ProjectV2 multi-calc shared schema (shared + geometry + calcs[]). Zie ADR-002."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
isso51-core = { path = "../isso51-core" }
isso53-core = { path = "../isso53-core" }
nta8800-model = { path = "../nta8800-model" }
nta8800-cooling = { path = "../nta8800-cooling" }
nta8800-demand = { path = "../nta8800-demand" }
nta8800-tables = { path = "../nta8800-tables" }
nta8800-transmission = { path = "../nta8800-transmission" }
nta8800-ventilation = { path = "../nta8800-ventilation" }
nta8800-heating = { path = "../nta8800-heating" }
nta8800-dhw = { path = "../nta8800-dhw" }
nta8800-pv = { path = "../nta8800-pv" }
nta8800-automation = { path = "../nta8800-automation" }
nta8800-ep = { path = "../nta8800-ep" }

[dev-dependencies]
approx = "0.5"
