[package]
name = "uniec3-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uniec 3 native .uniec3 export → ProjectV2 (beng_geometry + energy) + certified referentie (F8)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
schemars = "0.8"
thiserror = "2"
zip = "0.6"
openaec-project-shared = { path = "../openaec-project-shared" }

[features]
default = []
